--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,12 @@
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@200;400&display=swap" rel="stylesheet">
     
-    <title>React App</title>
+    <title>PURE</title>
   </head>
 
   <body>
